// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scene findByIdAndUpdate should update a scene 1`] = `
Array [
  RowDataPacket {
    "description": "this is an updated second test",
    "name": "scene_2",
    "scene_id": 2,
  },
]
`;

exports[`Scene findByIdAndUpdate should update a scene 2`] = `
Array [
  RowDataPacket {
    "action_id": 4,
    "body": "{\\"on\\":false}",
    "name": "action turn off",
    "scene_id": 2,
    "target_id": 2,
    "type": "DIO",
  },
  RowDataPacket {
    "action_id": 5,
    "body": "{\\"on\\":true}",
    "name": "action turn off",
    "scene_id": 2,
    "target_id": 4,
    "type": "DIO",
  },
]
`;

exports[`Scene save should save a new scene 1`] = `
Array [
  RowDataPacket {
    "description": "save test",
    "name": "scene_3",
    "scene_id": 3,
  },
]
`;

exports[`Scene save should save a new scene 2`] = `
Array [
  RowDataPacket {
    "action_id": 4,
    "body": "{\\"on\\":true}",
    "name": "action one",
    "scene_id": 3,
    "target_id": 1,
    "type": "DIO",
  },
  RowDataPacket {
    "action_id": 5,
    "body": "{\\"on\\":true,\\"bri\\":255}",
    "name": "action two",
    "scene_id": 3,
    "target_id": 1,
    "type": "HUE_LIGHT",
  },
]
`;
